# uv-cibuildwheel-ruff-coverage-template

./: README.md  meta.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  coverage.yml  docs.yml  example.yml  pyodide.yml
rust/: Cargo.toml
