[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.23.1"

[profile.release-lto]
inherits = "release"
lto = true

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"  # private module to be nested into Python package
crate-type = ["cdylib"]

[[bin]]
name = "print-hello"
path = "print_hello.rs"
